Correcciones proyecto grupal